# gemiz

./: .gitignore  README.md  methods.txt  pyproject.toml
.claude/: settings.local.json
data/comparison/: carveme_results.json
data/reference/: ecoli_feature_table.txt
scripts/: benchmark.py  build_cross_templates.py  build_universal_db.py  compare_tools.py  download_mmseqs.py  esm_degradation_test.py  setup_organism.py  validate_essentiality.py
src/gemiz/: __init__.py  cli.py
src/gemiz/db/: __init__.py  downloader.py  ncbi.py
src/gemiz/embedding/: database.py  esm.py
src/gemiz/embeddings/: __init__.py  esmc.py
src/gemiz/io/: __init__.py  sbml.py
src/gemiz/pipeline/: __init__.py  alignment.py  prodigal.py
src/gemiz/reconstruction/: __init__.py  carving.py  gpr.py  pipeline.py  scoring.py  scoring_tuner.py
src/gemiz/solver/: __init__.py  gapfill.py
src/gemiz/utils/: binaries.py
tests/: test_alignment.py  test_carving.py  test_cli.py  test_esm.py  test_pipeline.py  test_prodigal.py  test_scoring.py
