[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemiz"
version = "0.1.0"
description = "Genome-scale metabolic model reconstruction for bacteria"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "gemiz contributors" }]
keywords = ["bioinformatics", "metabolic-modeling", "GEM", "systems-biology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI
    "click>=8.1",
    "rich>=13.0",
    # GEM handling
    "cobra>=0.29",
    # Solver (HiGHS — free, fast MILP)
    "highspy>=1.7",
    # Bioinformatics
    "biopython>=1.84",
    "pyrodigal>=3.0",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # HTTP / downloads
    "requests>=2.32",
    "tqdm>=4.66",
]

[project.optional-dependencies]
embeddings = [
    "torch>=2.3",
    "esm>=3.0",
    "faiss-cpu>=1.8",
    "huggingface-hub>=0.23",
]
gpu = [
    "gemiz[embeddings]",
    "faiss-gpu>=1.7",
]
full = [
    "gemiz[embeddings]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
gemiz = "gemiz.cli:main"

[project.urls]
Repository = "https://github.com/gemiz/gemiz"
Issues = "https://github.com/gemiz/gemiz/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gemiz = ["bin/mmseqs/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
